2013-06-17  Sung W. Park (sung_)

	* Evas: add partial rendering support for Evas_GL direct rendering

2013-06-17  Cedric Bail

	* Edje: Use Eo array of callbacks to reduce edje memory foot print.

2013-06-13  Jiyou Park

        * Evas: Fix crash if app call image object update add after calling api like fileset.

2013-06-11  Carsten Haitzler (The Rasterman)

        * Support qualcomm begin/end tile extension for partial update

2013-06-06  ChunEon Park (Hermet)

        * Edje: support edc map color set

2013-06-05  Jiyou Park

        * Evas: Fix gif cannot decode alpha value correctly.

2013-06-04  Jean-Philippe Andre

	* Evas: improve stability of Evas_Cserve2.

2013-06-04  Cedric Bail

	* Evas: correctly detect if loader support asynchronous preloading.
	* Eina: add eina_file_dup.

2013-06-03  Ederson Desouza

        * Add -1.0 value to text ellipsis -- for not ellipsizing it at all.

2013-06-03  Carsten Haitzler (The Rasterman)

        * Fix edje min size calc to propagate min size calcs to GROUP
        items swallowed in automatically.

2013-05-31  Carsten Haitzler (The Rasterman)

        * Fix ascent/descent in textblock when fontsets are used to be
        superset of all ascent/descents.

2013-05-31  ChunEon Park (Hermet)

        * Edje: support edc proxy.source_visible, proxy.source_clip

2013-05-31  Jérémy Zurcher

        * Added --enable-image-loader-xyz=yes|static|auto|no for all loaders
        * compilation fail if not found and option set to yes or static

2013-05-29  Carsten Haitzler (The Rasterman)

        * Fix evas gl partial swap to keep full re-render rects if
        switching mode automatically.

2013-05-29  Mike Blumenkrantz

        * Added eina_str_convert_len() to work around broken eina_str_convert()
        * Add ecore-x(cb) support for text/x-moz-url DND operations

2013-05-28  ChunEon Park (Hermet)

        * Fix textblock to render pre again if it needs to relayouting.

2013-05-27  Jihoon Kim (jihoon)
