@@ -1,3 +1,7 @@
+2013-06-18  Cedric Bail
+
+	* Evas: Use Eo array of callbacks to reduce edje memory foot print of Evas_Object_Box.
+
 2013-06-17  Sung W. Park (sung_)
 
 	* Evas: add partial rendering support for Evas_GL direct rendering
